# grpc-server

./: README.md
go/: build_proto.sh  go.mod  go.sum  main.go
go/proto/: message_server.pb.go  message_server_grpc.pb.go
go/proto/grpc-server/go-server/: message_server.pb.go  message_server_grpc.pb.go
proto/: message_server.proto
python/: build_proto.sh  pyproject.toml
python/src/: message_server_pb2_grpc.py
python/src/client/: main.py
python/src/server/: main.py
